force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>School Type Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Territory__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Academy Network</fullName>
            </value>
            <value>
                <fullName>Catholic</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Charter Network</fullName>
            </value>
            <value>
                <fullName>Christian</fullName>
            </value>
            <value>
                <fullName>County District</fullName>
            </value>
            <value>
                <fullName>Denominational</fullName>
            </value>
            <value>
                <fullName>Episcopal</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Government-aided</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Islamic</fullName>
            </value>
            <value>
                <fullName>Jewish</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Lutheran</fullName>
            </value>
            <value>
                <fullName>Peak Body</fullName>
            </value>
            <value>
                <fullName>Prep</fullName>
                <label>Prep School</label>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>School District</fullName>
            </value>
            <value>
                <fullName>School Network</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Seventh Day Adventist</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>State Department</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>University Career Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>