force-app/main/default/objects/Account/fields/Boarders__c.field-meta.xml
<CustomField>
    <fullName>Boarders__c</fullName>
    <label>Boarders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No boarders</fullName>
            </value>
            <value>
                <fullName>Boarding school</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>College / FE residential accommodation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>