force-app/main/default/objects/Account/fields/Early_Morning_Fee__c.field-meta.xml
<CustomField>
    <fullName>Early_Morning_Fee__c</fullName>
    <label>Early Morning Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>