force-app/main/default/objects/Account/fields/Flight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Flight_Cost__c</fullName>
    <label>Flight Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>