force-app/main/default/objects/Account/fields/Lead_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_ID__c</fullName>
    <description>For Accounts created by Lead Conversion. This field was created to capture the Lead that this Account was converted from.</description>
    <inlineHelpText>For Accounts created by Lead Conversion only</inlineHelpText>
    <label>Lead Record ID</label>
    <length>125</length>
    <type>Text</type>
</CustomField>