force-app/main/default/objects/Account/fields/Local_Authority_Code__c.field-meta.xml
<CustomField>
    <fullName>Local_Authority_Code__c</fullName>
    <label>Local Authority Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>