force-app/main/default/objects/Account/fields/Ofsted_Rating__c.field-meta.xml
<CustomField>
    <fullName>Ofsted_Rating__c</fullName>
    <label>Ofsted Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Requires improvement</fullName>
            </value>
            <value>
                <fullName>Inadequate</fullName>
            </value>
            <value>
                <fullName>Special Measures</fullName>
            </value>
            <value>
                <fullName>Serious Weaknesses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>