force-app/main/default/objects/Account/fields/Organisation_Type2__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Type2__c</fullName>
    <label>Organisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Children&apos;s centre</fullName>
            </value>
            <value>
                <fullName>Children&apos;s centre linked site</fullName>
            </value>
            <value>
                <fullName>Voluntary aided school</fullName>
            </value>
            <value>
                <fullName>Other independent school</fullName>
            </value>
            <value>
                <fullName>Local authority nursery school</fullName>
            </value>
            <value>
                <fullName>Pupil referral unit</fullName>
            </value>
            <value>
                <fullName>Community school</fullName>
            </value>
            <value>
                <fullName>Foundation special school</fullName>
            </value>
            <value>
                <fullName>Community special school</fullName>
            </value>
            <value>
                <fullName>Foundation school</fullName>
            </value>
            <value>
                <fullName>Voluntary controlled school</fullName>
            </value>
            <value>
                <fullName>Other independent special school</fullName>
            </value>
            <value>
                <fullName>City technology college</fullName>
            </value>
            <value>
                <fullName>Non-maintained special school</fullName>
            </value>
            <value>
                <fullName>Academy sponsor led</fullName>
            </value>
            <value>
                <fullName>Special post 16 institution</fullName>
            </value>
            <value>
                <fullName>Secure units</fullName>
            </value>
            <value>
                <fullName>Further education</fullName>
            </value>
            <value>
                <fullName>Higher education institutions</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>British schools overseas</fullName>
            </value>
            <value>
                <fullName>Service children&apos;s education</fullName>
            </value>
            <value>
                <fullName>Offshore schools</fullName>
            </value>
            <value>
                <fullName>Sixth form centres</fullName>
            </value>
            <value>
                <fullName>Academy converter</fullName>
            </value>
            <value>
                <fullName>Free schools</fullName>
            </value>
            <value>
                <fullName>Academy special converter</fullName>
            </value>
            <value>
                <fullName>Studio schools</fullName>
            </value>
            <value>
                <fullName>University technical college</fullName>
            </value>
            <value>
                <fullName>Academy special sponsor led</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>