force-app/main/default/objects/Account/fields/Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Type__c</fullName>
    <label>Organisation Type Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Educational Institution</fullName>
                <default>true</default>
                <label>Educational Institution</label>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Person Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>