force-app/main/default/objects/Account/fields/Overnight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Overnight_Cost__c</fullName>
    <inlineHelpText>Hotel + stipend</inlineHelpText>
    <label>Overnight Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>