force-app/main/default/objects/Account/fields/Percentage_FSM__c.field-meta.xml
<CustomField>
    <fullName>Percentage_FSM__c</fullName>
    <label>Percentage FSM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>