force-app/main/default/objects/Account/fields/Radius_included_in_travel_fee__c.field-meta.xml
<CustomField>
    <fullName>Radius_included_in_travel_fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To confirm if the school is included in 20km radius or not. To ensure we charge travel fee correctly.</description>
    <inlineHelpText>To confirm if the school is included in 20km radius or not. To ensure we charge travel fee correctly.</inlineHelpText>
    <label>Radius included in travel fee</label>
    <type>Checkbox</type>
</CustomField>