force-app/main/default/objects/Account/fields/Religious_Character__c.field-meta.xml
<CustomField>
    <fullName>Religious_Character__c</fullName>
    <label>Religious Character</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Church of England</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Does not apply</fullName>
            </value>
            <value>
                <fullName>Roman Catholic</fullName>
            </value>
            <value>
                <fullName>Catholic</fullName>
            </value>
            <value>
                <fullName>Jewish</fullName>
            </value>
            <value>
                <fullName>Charadi Jewish</fullName>
            </value>
            <value>
                <fullName>Islam</fullName>
            </value>
            <value>
                <fullName>Christian</fullName>
            </value>
            <value>
                <fullName>Anglican</fullName>
            </value>
            <value>
                <fullName>Orthodox Jewish</fullName>
            </value>
            <value>
                <fullName>Muslim</fullName>
            </value>
            <value>
                <fullName>Methodist</fullName>
            </value>
            <value>
                <fullName>Free Church</fullName>
            </value>
            <value>
                <fullName>Church of England/Christian</fullName>
            </value>
            <value>
                <fullName>Seventh Day Adventist</fullName>
            </value>
            <value>
                <fullName>Church of England/Methodist</fullName>
            </value>
            <value>
                <fullName>Church of England/Free Church</fullName>
            </value>
            <value>
                <fullName>Christian/Evangelical</fullName>
            </value>
            <value>
                <fullName>Moravian</fullName>
            </value>
            <value>
                <fullName>Quaker</fullName>
            </value>
            <value>
                <fullName>United Reformed Church</fullName>
            </value>
            <value>
                <fullName>Multi-faith</fullName>
            </value>
            <value>
                <fullName>Anglican/Evangelical</fullName>
            </value>
            <value>
                <fullName>Church of England/Roman Catholic</fullName>
            </value>
            <value>
                <fullName>Church of England/Evangelical</fullName>
            </value>
            <value>
                <fullName>Christian/Methodist</fullName>
            </value>
            <value>
                <fullName>Roman Catholic/Church of England</fullName>
            </value>
            <value>
                <fullName>Christian/non-denominational</fullName>
            </value>
            <value>
                <fullName>Anglican/Christian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>