force-app/main/default/objects/Account/fields/School_structure__c.field-meta.xml
<CustomField>
    <fullName>School_structure__c</fullName>
    <label>Phase of Education</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Territory__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>6th Form</fullName>
            </value>
            <value>
                <fullName>Composite</fullName>
            </value>
            <value>
                <fullName>Elementary</fullName>
            </value>
            <value>
                <fullName>Elementary School</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Junior College</fullName>
            </value>
            <value>
                <fullName>K-12</fullName>
            </value>
            <value>
                <fullName>K-8 School</fullName>
            </value>
            <value>
                <fullName>Middle School</fullName>
            </value>
            <value>
                <fullName>Prep</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Tertiary</fullName>
            </value>
            <value>
                <fullName>Primary &amp; Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>