force-app/main/default/objects/Account/fields/School_Type__c.field-meta.xml
<CustomField>
    <fullName>School_Type__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coeducational</fullName>
                <label>Mixed</label>
            </value>
            <value>
                <fullName>Girls Only</fullName>
            </value>
            <value>
                <fullName>Boys Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>