force-app/main/default/objects/Account/fields/Sixth_Form__c.field-meta.xml
<CustomField>
    <fullName>Sixth_Form__c</fullName>
    <label>Sixth Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Does not have a sixth form</fullName>
            </value>
            <value>
                <fullName>Has a sixth form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>