force-app/main/default/objects/Account/fields/Taxi_Cost__c.field-meta.xml
<CustomField>
    <fullName>Taxi_Cost__c</fullName>
    <label>Taxi Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>