force-app/main/default/objects/Account/fields/Travel_Costs_additional__c.field-meta.xml
<CustomField>
    <fullName>Travel_Costs_additional__c</fullName>
    <formula>Flight_Cost__c +  Overnight_Cost__c +  Taxi_Cost__c +  Early_Morning_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flight Cost + Overnight cost+ Taxi Cost + Early Morning Fee</inlineHelpText>
    <label>Travel Fee (additional)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>