force-app/main/default/objects/Account/fields/Travel_Fee_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Travel_Fee_Last_Updated__c</fullName>
    <description>Last time Travel Fee was updated</description>
    <inlineHelpText>Last time Travel Fee was updated</inlineHelpText>
    <label>Travel Fee (vehicle) Last Updated</label>
    <type>DateTime</type>
</CustomField>