force-app/main/default/objects/Account/fields/Travel_Pay__c.field-meta.xml
<CustomField>
    <fullName>Travel_Pay__c</fullName>
    <description>The amount of travel pay per presenter.</description>
    <label>Travel Fee (vehicle)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>