force-app/main/default/objects/Account/fields/Year_Level_Current__c.field-meta.xml
<CustomField>
    <fullName>Year_Level_Current__c</fullName>
    <description>ARCHIVED. Replaced by formula field of the same label.</description>
    <inlineHelpText>ARCHIVED. Replaced by formula field of the same label. Person Accounts Only. Student&apos;s current year level.</inlineHelpText>
    <label>ARCHIVED_Year Level (Current)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year_Level</valueSetName>
    </valueSet>
</CustomField>