force-app/main/default/objects/Account/fields/Year_Level_Current_New__c.field-meta.xml
<CustomField>
    <fullName>Year_Level_Current_New__c</fullName>
    <description>Person Accounts Only. Student&apos;s current year level.</description>
    <formula>IF(AND(VALUE(TEXT(Student_Year_Level__c))=12,YEAR(TODAY())-YEAR(DATEVALUE(CreatedDate)) &gt; 0),&quot;Finished Year 12&quot;,
IF((VALUE(TEXT(Student_Year_Level__c))+ YEAR(TODAY())-YEAR(DATEVALUE(CreatedDate)))&gt;12, &quot;Finished Year 12&quot; , 
IF(YEAR(TODAY())-YEAR(DATEVALUE(CreatedDate)) = 0, TEXT(Student_Year_Level__c) , 
IF(YEAR(TODAY())-YEAR(DATEVALUE(CreatedDate)) &gt; 0, TEXT(VALUE(TEXT(Student_Year_Level__c))+(YEAR(TODAY())-YEAR(DATEVALUE(CreatedDate)))) , 
TEXT(Student_Year_Level__c)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Person Accounts Only. Student&apos;s current year level.</inlineHelpText>
    <label>Year Level (Current)</label>
    <type>Text</type>
</CustomField>