force-app/main/default/objects/Account/recordTypes/Business_Organisation.recordType-meta.xml
<RecordType>
    <fullName>Business_Organisation</fullName>
    <active>true</active>
    <description>A corporate, charity or other non-education organisation</description>
    <label>Business Organisation</label>
</RecordType>