force-app/main/default/objects/Account/recordTypes/Educational_Organisation.recordType-meta.xml
<RecordType>
    <fullName>Educational_Organisation</fullName>
    <active>true</active>
    <description>A school, university or other higher educational institution</description>
    <label>Educational Organisation</label>
</RecordType>